--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@trpc/client": "^10.9.0",
+		"@trpc/server": "^10.9.0",
+		"trpc-sveltekit": "^3.2.5"
+	}
 }
