--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"strict": true,
 		"baseUrl": ".",
 		"paths": {
-			"~": ["src/*"],
+			"~/*": ["src/*"],
 			"$lib":["./src/lib"],
 			"$lib/*":["./src/lib/*"]
 		}
