--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"@trpc/client": "^10.9.0",
 		"@trpc/server": "^10.9.0",
 		"date-fns": "^2.29.3",
+		"svelte-headlessui": "^0.0.14",
+		"svelte-transition": "^0.0.7",
 		"trpc-sveltekit": "^3.2.5"
 	}
 }
