--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
 		"@trpc/server": "^10.9.0",
 		"date-fns": "^2.29.3",
 		"svelte-headlessui": "^0.0.14",
+		"svelte-star-rating": "^2.0.1",
 		"svelte-transition": "^0.0.7",
-		"trpc-sveltekit": "^3.2.5"
+		"trpc-sveltekit": "^3.2.5",
+		"zod": "^3.20.6"
 	}
 }
